# CI

./: .coveragerc  README.md  pyproject.toml
.github/workflows/: main.yml
app/: pytest.ini
app/config/: settings.py  urls.py
app/main/: models.py  tests.py  urls.py  views.py
app/main/migrations/: 0001_initial.py
