[tool.poetry]
name = "ci"
version = "0.1.0"
description = ""
authors = ["hyeonggeun2 <dhgudrms12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"
coverage = "^5.0.3"
requests = "^2.23.0"
pytest = "^5.4.0"
pytest-django = "^3.8.0"
codecov = "^2.0.16"
pytest-cov = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
